Kubernetes/1.app-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvwa-service
  namespace: nginx-ingress
spec:
  selector:
    app: dvwa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa
  namespace: nginx-ingress
  labels:
    app: dvwa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
        - name: dvwa
          image: vulnerables/web-dvwa
          ports:
            - containerPort: 80
          resources: {}
