Kubernetes/4.app-test-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: nginx-ingress
spec:
  tls:
    - hosts:
        - xuanthulab.test
      secretName: default-server-secret
  rules:
    - host: xuanthulab.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-test-svc
                port:
                  number: 80
